RbA Build/src/objects/Resource_Skill__c.object
<CustomObject>
    <description>Skills assigned to Resources</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This checkbox determines if the resource skill is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RbA_Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RbA Skill</label>
        <referenceTo>RbA_Skills__c</referenceTo>
        <relationshipLabel>Resource Skills</relationshipLabel>
        <relationshipName>Resource_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Resource Skills</relationshipLabel>
        <relationshipName>Resource_Skills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Select if this is a Primary or Secondary skills for the Resource.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Resource Skill</label>
    <nameField>
        <displayFormat>Resource Skill #-{00}</displayFormat>
        <label>Resource Skill #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>